# gtm-control-layer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
app/advisory/: client.py  models.py
app/api/: errors.py  main.py  routes_advisory.py  routes_intake.py  routes_metrics.py  routes_override.py  routes_pipeline.py  routes_routing.py  routes_rules.py  routes_seed.py  routes_simulation.py
app/db/: database.py
app/intake/: models.py
app/metrics/: compute.py  seed.py  simulation.py
app/routing/: engine.py
app/rules/: config.py  engine.py
config/: rules.json
streamlit_app/: api_client.py  app.py  charts.py  requirements.txt
streamlit_app/pages/: 1_Submit.py  2_Dashboard.py  3_Simulation.py  4_Admin.py
tests/: test_advisory_api.py  test_advisory_client.py  test_db.py  test_feature5_api.py  test_intake_api.py  test_intake_models.py  test_metrics.py  test_routing_api.py  test_routing_engine.py  test_rules_api.py  test_rules_config.py  test_rules_engine.py
